--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "vue-tsc && vite build",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"test": "vitest"
 	},
 	"dependencies": {
 		"vue": "^3.2.47"
@@ -20,6 +21,7 @@
 		"prettier": "2.8.8",
 		"typescript": "^5.0.2",
 		"vite": "^4.3.9",
+		"vitest": "^0.32.4",
 		"vue-tsc": "^1.4.2"
 	}
 }
