--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,7 @@
 	},
 	"plugins": ["@typescript-eslint", "vue"],
 	"rules": {
-		"indent": ["error", "tab"],
+		"indent": ["error", "tab", { "SwitchCase": 1 }],
 		"linebreak-style": ["error", "unix"],
 		"quotes": ["error", "single"],
 		"semi": ["error", "always"]
